# DoQO

./: CMakeLists.txt  README  README.md
cmake-modules/: FindBoost.cmake  FindPETSc.cmake  FindSLEPc.cmake
python/: CMakeLists.txt  setup.py.in
python/src/: doqo_utils.py  extract_xml_rescale_results.py  extract_xml_results.py
src/: CMakeLists.txt  PetscMatrixBinary2Ascii.C  PetscSumVectors.C  PetscVectorBinary2Ascii.C  avlset.C  bst.h  conservation.C  conservation.h  doqo.C  doqo.h  expectation_value.C  expectation_value_funcs.C  expectation_value_funcs.h  hamiltonian.C  hamiltonian.h  matrix_free.C  matrix_free.h  momentum.C  momentum.h  output.C  output.h  pqsort.C  pqsort.h  rotation.C  rotation.h  solver_funcs.C  solver_funcs.h  spectral_flow.C  spectral_flow.h  symmetry.C  symmetry.h  tasks.C  tasks.h  utils.C  utils.h
src/entanglement_entropy/: CMakeLists.txt  a_sites.xml  a_sites_alt.xml  calculate_ee.py  entanglement_entropy.C  makefile  makefile.profile  p_entanglement_entropy.C  p_entanglement_entropy.h  p_entanglement_entropy_batch.C  p_entanglement_entropy_density.C  p_entanglement_entropy_fourier_cut.C  p_entanglement_entropy_fourier_cut.h  tinyxml.h
src/entanglement_entropy/cuda_version/: device_fourier_transform.cu  device_fourier_transform.h  fourier_transform_vec.cu  host_fourier_transform.cu  host_fourier_transform.h  makefile  makefile.mac  p_entanglement_entropy_fourier_cut.C  p_entanglement_entropy_fourier_cut.h
src/entanglement_entropy/cuda_version/test/heisenberg/: Heisenberg_N_4.ham  Heisenberg_N_4.input.xml  Heisenberg_N_4.output.xml  Heisenberg_N_4.rot  Heisenberg_N_4.task_0_filling_2.basis  Heisenberg_N_4.task_0_filling_2.xml  Heisenberg_N_4.task_0_filling_2_rotation_0.basis  Heisenberg_N_4.task_0_filling_2_rotation_0.xml  Heisenberg_N_4.task_0_filling_2_rotation_0_state_0.vec  Heisenberg_N_4.task_0_filling_2_rotation_0_state_0_ascii.vec  Heisenberg_N_4.task_0_filling_2_rotation_0_state_1.vec  Heisenberg_N_4.task_0_filling_2_state_0.vec  Heisenberg_N_4.task_0_filling_2_state_0_ascii.vec  Heisenberg_N_4.task_0_filling_2_state_1.vec  Heisenberg_N_4.task_0_filling_2_state_2.vec  Heisenberg_N_4.task_0_filling_2_state_3.vec  Heisenberg_N_4.task_0_filling_2_state_4.vec  Heisenberg_N_4.task_0_filling_2_state_5.vec  Heisenberg_N_4_tasks  doqo_utils_heisenberg.py
