CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (DoQO)

SET (DoQO_VERSION_MAJOR 2)
SET (DoQO_VERSION_MINOR 0)

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")

FIND_PACKAGE (PETSc REQUIRED)
FIND_PACKAGE (SLEPc REQUIRED)
FIND_PACKAGE (Boost 1.40.0 REQUIRED)

INCLUDE_DIRECTORIES (${PETSC_INCLUDES} ${SLEPC_INCLUDES} ${Boost_INCLUDE_DIRS})
MESSAGE(STATUS "Setting ${Boost_INCLUDE_DIRS}")
ADD_DEFINITIONS (${PETSC_DEFINITIONS})

ADD_SUBDIRECTORY (src) 
ADD_SUBDIRECTORY (python) 
#ADD_SUBDIRECTORY (src/entanglement_entropy) 

