ADD_EXECUTABLE (DoQO doqo.C)
ADD_EXECUTABLE (DoQOVectorBinary2Ascii PetscVectorBinary2Ascii.C)
ADD_EXECUTABLE (DoQOMatrixBinary2Ascii PetscMatrixBinary2Ascii.C)
ADD_EXECUTABLE (DoQOSumVectors PetscSumVectors.C)
ADD_LIBRARY (DoQO_Libs hamiltonian.C expectation_value_funcs.C utils.C solver_funcs.C tasks.C symmetry.C matrix_free.C output.C momentum.C tinyxml.C tinystr.C tinyxmlerror.C tinyxmlparser.C conservation.C spectral_flow.C pqsort.C rotation.C)
TARGET_LINK_LIBRARIES (DoQOVectorBinary2Ascii ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} DoQO_Libs)
TARGET_LINK_LIBRARIES (DoQOMatrixBinary2Ascii ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} DoQO_Libs)
TARGET_LINK_LIBRARIES (DoQOSumVectors ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} DoQO_Libs)
TARGET_LINK_LIBRARIES (DoQO ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} DoQO_Libs)
install (TARGETS DoQOVectorBinary2Ascii DESTINATION bin)
install (TARGETS DoQOMatrixBinary2Ascii DESTINATION bin)
install (TARGETS DoQOSumVectors DESTINATION bin)
install (TARGETS DoQO DESTINATION bin)
