ADD_EXECUTABLE (entanglement_entropy entanglement_entropy.C)
ADD_EXECUTABLE (p_entanglement_entropy p_entanglement_entropy.C)
ADD_EXECUTABLE (p_entanglement_entropy_batch p_entanglement_entropy.C)
ADD_EXECUTABLE (p_entanglement_entropy_density p_entanglement_entropy_density.C)
ADD_EXECUTABLE (p_entanglement_entropy_fourier_cut p_entanglement_entropy_fourier_cut.C)
ADD_LIBRARY (Entanglement_Libs tinyxml.C tinystr.C tinyxmlerror.C tinyxmlparser.C)
TARGET_LINK_LIBRARIES (entanglement_entropy ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} Entanglement_Libs)
TARGET_LINK_LIBRARIES (p_entanglement_entropy ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} Entanglement_Libs)
TARGET_LINK_LIBRARIES (p_entanglement_entropy_batch ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} Entanglement_Libs)
TARGET_LINK_LIBRARIES (p_entanglement_entropy_density ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} Entanglement_Libs)
TARGET_LINK_LIBRARIES (p_entanglement_entropy_fourier_cut ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} Entanglement_Libs)
install (TARGETS entanglement_entropy DESTINATION bin)
install (TARGETS p_entanglement_entropy DESTINATION bin)
install (TARGETS p_entanglement_entropy_batch DESTINATION bin)
install (TARGETS p_entanglement_entropy_density DESTINATION bin)
install (TARGETS p_entanglement_entropy_fourier_cut DESTINATION bin)
